vpc/main.tf
resource "aws_vpc" "example_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = false
  enable_dns_hostnames = false

  tags = {
    Name = "example_vpc"
  }
}

resource "aws_subnet" "sample_subnet" {
  vpc_id = aws_vpc.example_vpc.id
  cidr_block = "10.0.0.0/24"
  map_public_ip_on_launch = true
  availability_zone = "ap-northeast-1a"

  tags = {
    Name = "sample_subnet"
  }
}

resource "aws_internet_gateway" "example_gw" {
  vpc_id = aws_vpc.example_vpc.id

  tags = {
    Name = "example_gw"
  }
}

resource "aws_route_table" "example_rt" {
  vpc_id = aws_vpc.example_vpc.id

  tags = {
    Name = "example_rt"
  }
}

resource "aws_route" "example_route" {
  route_table_id = aws_route_table.example_rt.id
  gateway_id = aws_internet_gateway.example_gw.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_route_table_association" "example_route" {
  subnet_id = aws_subnet.sample_subnet.id
  route_table_id = aws_route_table.example_rt.id
}
